--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <activity
             android:name=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SalleActivity" />
+        <activity android:name=".Salle.SalleActivity" />
         <activity android:name=".ProfilActivity"></activity>
     </application>
 
